2021-04-04 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/host/spec.mk.in:
	  Timeout for host regression tests (RFE #3209).

2021-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/ez80_z80/crt0.s,
	  device/lib/tlcs90/crt0.s,
	  device/lib/z180/crt0.s,
	  device/lib/z80/crt0.s,
	  device/lib/z80n/crt0.s:
	  Do default-initalization in crt0 to not rely on simulator zeroing memory.
	* device/lib/gbz80/crt0.s:
	  src/z80/main.c,
	  .version:
	  Improve explicit initialization.
	* configure.ac,
	  aclocal.m4,
	  configure:
	  Improve detection of python interpreter binary.

2021-04-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Fix bug #3207.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Remove AOP, AOP_SIZE, AOP_TYPE macros.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix possible errors caused by operands allocation.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix one of highlighted bugs by change from Apr 01.

2021-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/ralloc2.cc:
	  Remove infrastructure for reserving hl in register allocator.

2021-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  src/z80/gen.c:
	  Remove old register allocator code from z80-related backends.

2021-04-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  src/z80/ralloc.c,
	  .version,
	  doc/sdccman.lyx:
	  Deprecate --oldralloc for z80-related backends.

2021-04-02 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Fix one of highlighted bugs by previous change.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/gen.c:
	  Partially fix bug #3203, but highlights new bugs.

2021-04-01 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sdas/asz80/z80mch.c:
	  Enable undocumented Z80 instructions for Z80N.
